--- a/src/cart__page/products__in__cart/products__in__cart__1000.module.scss
+++ b/src/cart__page/products__in__cart/products__in__cart__1000.module.scss
@@ -6,7 +6,7 @@
 
             .products__in_cart__header {
                 padding: 2rem;
-                display: flex;
+                display: flex !important    ;
                 background: #fff;
 
                 .header__product {
