--- a/src/MainPage/CATEGORIES/Categories Min-width 1000px.css
+++ b/src/MainPage/CATEGORIES/Categories Min-width 1000px.css
@@ -2,6 +2,7 @@
   #categories__main__page {
     background: #f5f5f5;
     display: block;
+    margin-top: 2rem;
   }
   .categories__main__page--layout {
       background: #fff;
