--- a/src/cart__page/also__like/also__like__1000.module.scss
+++ b/src/cart__page/also__like/also__like__1000.module.scss
@@ -1,5 +1,13 @@
 @media screen and (min-width: 1000px) {
     .you__also__like {
-        margin: 0;
+        margin-top: 5rem;
+        .you__also__like__layout{
+            .header {
+                margin-bottom: 2rem;
+                .header__title {
+                    text-align: start;
+                }
+            }
+        }
     }
 }
