--- a/src/cart__page/render__items__buy/render__items__buy__1000.module.scss
+++ b/src/cart__page/render__items__buy/render__items__buy__1000.module.scss
@@ -32,7 +32,7 @@
                 grid-template-columns: repeat(4, 1fr);
                 align-items: center;
                 justify-content: center;
-
+                gap: .5rem;
                 .body__box__price__product {
                     justify-content: center;
                 }
