--- a/src/cart__page/render__items__buy/render__items__buy.module.scss
+++ b/src/cart__page/render__items__buy/render__items__buy.module.scss
@@ -156,6 +156,13 @@
                     font-size: 1.3rem;
                     color: tomato
                 }
+                .body__total__cost__product{
+                    display: block;
+                    .total__cost {
+                        display: block;
+
+                    }
+                }
             }
 
             .body__box__amount__product {
