--- a/src/cart__page/also__like/also__like.module.scss
+++ b/src/cart__page/also__like/also__like.module.scss
@@ -1,5 +1,6 @@
 .you__also__like {
     .you__also__like__layout {
+        margin-top: 5rem;
         .header {
             margin-bottom: 1rem;
             .header__title {
