--- a/src/Product/Quantity/quantity_1000.module.scss
+++ b/src/Product/Quantity/quantity_1000.module.scss
@@ -20,11 +20,14 @@
             .body__calculator {
                 display: flex;
                 align-items: center;
-
+                height: 100%;
+                min-height: 100%;
                 .body__box__icons {
                     padding: .5rem;
                     border: .1rem solid #0002;
                     cursor: pointer;
+                    min-height: 100%;
+                    height: 100%;
 
                     .calculator__plus,
                     .calculator__minus {
