--- a/src/cart__page/render__items__buy/render__items__buy.module.scss
+++ b/src/cart__page/render__items__buy/render__items__buy.module.scss
@@ -26,7 +26,14 @@
             justify-content: flex-end;
             align-items: center;
             .btn__edit{
+                display: none;
                 font-size: 1.3rem;
+                &.active__btn {
+                    display: block
+                }
+            }
+            .btn__done{
+                @extend .btn__edit;
             }
         }
         .header__icon__store {
@@ -56,172 +63,174 @@
         padding: 2rem;
         flex: 1;
         display: flex;
-        flex-direction: column;
+        overflow: hidden;
+        gap: 2rem;
+        .body__info{
 
-        .body__info__products {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            flex: 1;
-            overflow: hidden;
-            .body__box__input {
-                .body__input__checkbox {
-                    width: 1.5rem;
-                    height: 1.5rem;
-                }
-            }
-
-            .body__box__img {
-                width: 8rem;
-                height: 8rem;
-                min-width: 8rem;
-                min-height: 8rem;
-            }
-
-            .body__box__info__text {
-                width: 100%;
+            .body__info__products {
                 display: flex;
-                flex-direction: column;
-                gap: .5rem;
-                justify-content: center;
-                overflow: hidden;
-                .body__info__text__title {
-                    font-size: 1.3rem;
-                    font-weight: 400;
-                    line-height: 1.3rem;
-                    height: 1.3rem;
-                    display: -webkit-box;
-                    -webkit-box-orient: vertical;
-                    -webkit-line-clamp: 1;
-                    text-overflow: ellipsis;
-                    text-wrap: wrap;
-                    overflow: hidden;
-                    width: 100%;
-                }
-
-                .body__info__text__return {
-                    .body__time__return {
-                        font-size: 1rem;
-                        font-weight: 400;
-                        padding:.2rem;
-                        border-radius: .3rem;
-                        -webkit-border-radius: .3rem;
-                        -moz-border-radius: .3rem;
-                        -ms-border-radius: .3rem;
-                        -o-border-radius: .3rem;
-                        border: .1rem solid tomato;
-                        color: tomato;
-                        display: inline-block;
-
-                    }
-                }
-
-                .body__info__logo__voucher {
-                    height: 1.8rem;
-                    width: 100%;
-                    max-width: 28rem;
-                    min-width: 27rem;
-                }
-            }
-        }
-
-        .body__info__price__products {
-            display: grid;
-            flex: 1;
-            grid-template-columns: repeat(1, 1fr);
-            align-items: center;
-            .body__box__price__product {
-                display: flex;
-                gap: 1rem;
                 align-items: center;
-                justify-content: flex-end;
-
-                .body__price__default {
-                    font-size: 1.3rem;
-                    color: #757575;
-                    position: relative;
-
-                    &::after {
-                        content: "";
-                        position: absolute;
-                        width: calc(100% + .5rem);
-                        height: .1rem;
-                        left: -.25rem;
-                        top: 50%;
-                        background: currentColor;
+                gap: 1rem;
+                flex: 1;
+                .body__box__input {
+                    .body__input__checkbox {
+                        width: 1.5rem;
+                        height: 1.5rem;
                     }
                 }
-
-                .body__price__discount {
-                    font-size: 1.3rem;
-                    color: tomato
+    
+                .body__box__img {
+                    width: 8rem;
+                    height: 8rem;
+                    min-width: 8rem;
+                    min-height: 8rem;
                 }
-                .body__total__cost__product{
-                    display: block;
-                    .total__cost {
-                        display: block;
-
-                    }
-                }
-            }
-
-            .body__box__amount__product {
-                @extend .body__box__price__product;
-                margin-top: .5rem;
-
-                .body__box__edit__amount__product {
+    
+                .body__box__info__text {
+                    width: 100%;
                     display: flex;
-                    align-items: center;
+                    flex-direction: column;
+                    gap: .5rem;
                     justify-content: center;
-                    border: .1rem solid #e8e8e8;
-
-                    .body__box__btn__minus__product {
-                        height: 100%;
-                        padding: 1rem;
-                        border-right: .1rem solid #e8e8e8;
-
-                        .body__btn__minus__product {
-                            width: 1rem;
-                            height: 1rem;
+                    overflow: hidden;
+                    .body__info__text__title {
+                        font-size: 1.3rem;
+                        font-weight: 400;
+                        line-height: 1.3rem;
+                        height: 1.3rem;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 1;
+                        text-overflow: ellipsis;
+                        text-wrap: wrap;
+                        overflow: hidden;
+                        width: 100%;
+                    }
+    
+                    .body__info__text__return {
+                        .body__time__return {
+                            font-size: 1rem;
+                            font-weight: 400;
+                            padding:.2rem;
+                            border-radius: .3rem;
+                            -webkit-border-radius: .3rem;
+                            -moz-border-radius: .3rem;
+                            -ms-border-radius: .3rem;
+                            -o-border-radius: .3rem;
+                            border: .1rem solid tomato;
+                            color: tomato;
+                            display: inline-block;
+    
                         }
                     }
-
-                    .body__box__btn__plus__product {
-                        @extend .body__box__btn__minus__product;
-                        border-right: 0rem solid #e8e8e8;
-                        border-left: .1rem solid #e8e8e8;
-
-                        .body__btn__plus__product {
-                            width: 1rem;
-                            height: 1rem;
+    
+                    .body__info__logo__voucher {
+                        height: 2.8rem;
+                        width: 100%;
+                        max-width: 28rem;
+                        min-width: 27rem;
+                    }
+                }
+            }
+    
+            .body__info__price__products {
+                display: grid;
+                flex: 1;
+                grid-template-columns: repeat(1, 1fr);
+                align-items: center;
+                .body__box__price__product {
+                    display: flex;
+                    gap: 1rem;
+                    align-items: center;
+                    justify-content: flex-end;
+    
+                    .body__price__default {
+                        font-size: 1.3rem;
+                        color: #757575;
+                        position: relative;
+    
+                        &::after {
+                            content: "";
+                            position: absolute;
+                            width: calc(100% + .5rem);
+                            height: .1rem;
+                            left: -.25rem;
+                            top: 50%;
+                            background: currentColor;
                         }
                     }
-
-                    .body__box__input__product {
-                        height: 100%;
-
-                        .body__input__number__product {
-                            width: 5rem;
-                            outline: none;
-                            padding: 1rem;
+    
+                    .body__price__discount {
+                        font-size: 1.3rem;
+                        color: tomato
+                    }
+                    .body__total__cost__product{
+                        display: block;
+                        .total__cost {
+                            display: block;
+    
+                        }
+                    }
+                }
+    
+                .body__box__amount__product {
+                    @extend .body__box__price__product;
+                    margin-top: .5rem;
+    
+                    .body__box__edit__amount__product {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border: .1rem solid #e8e8e8;
+    
+                        .body__box__btn__minus__product {
                             height: 100%;
-                            text-align: center;
+                            padding: 1rem;
+                            border-right: .1rem solid #e8e8e8;
+                            cursor: pointer;
+                            .body__btn__minus__product {
+                                width: 1rem;
+                                height: 1rem;
+                            }
+                        }
+    
+                        .body__box__btn__plus__product {
+                            @extend .body__box__btn__minus__product;
+                            border-right: 0rem solid #e8e8e8;
+                            border-left: .1rem solid #e8e8e8;
+    
+                            .body__btn__plus__product {
+                                width: 1rem;
+                                height: 1rem;
+                            }
+                        }
+    
+                        .body__box__input__product {
+                            height: 100%;
+    
+                            .body__input__number__product {
+                                width: 5rem;
+                                outline: none;
+                                padding: 1rem;
+                                height: 100%;
+                                text-align: center;
+                            }
                         }
                     }
+    
+                    .body__amount__product {
+                        font-size: 1.1rem;
+                        font-weight: 400;
+                        color: tomato;
+                        text-transform: capitalize;
+                    }
                 }
-
-                .body__amount__product {
-                    font-size: 1.1rem;
-                    font-weight: 400;
-                    color: tomato;
-                    text-transform: capitalize;
+                .body__box__btn__delete__product{
+                    display: none;
                 }
-            }
-            .body__box__btn__delete__product{
-                display: none;
-            }
-            .body__box__total__cost__product{
-                display: none;
+                .body__box__total__cost__product{
+                    display: none;
+                }
             }
         }
     }
