--- a/src/Result Search Items Page/Navigation Mobi/Navigation Mobi.module.scss
+++ b/src/Result Search Items Page/Navigation Mobi/Navigation Mobi.module.scss
@@ -64,6 +64,7 @@
   overflow-x: auto;
   gap: 1rem;
   padding: 1rem 0.5rem;
+  scrollbar-color: transparent transparent;
   .navigation__body__options {
     display: flex;
     align-items: center;
