--- a/src/Header/Header result search mobi/Header Result Search Mobi Max-width 600px.css
+++ b/src/Header/Header result search mobi/Header Result Search Mobi Max-width 600px.css
@@ -1,7 +1,8 @@
 
 .header__result__search__mobi--layout {
   position: relative;
-  padding: .5rem;
+  padding: 1rem ;
+  background: #fff;
 }
 .header__result__search__mobi--header {
   display: flex;
