--- a/src/Product/Quantity/quantity_1000.module.scss
+++ b/src/Product/Quantity/quantity_1000.module.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 1000px) {
 
     .quantity {
-        display: flex;
+        display: flex !important;
         gap: 2rem;
         margin-top: 3rem;
 
